<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CashBook</string>
    <string name="cashbook_is_empty">CashBook is Empty</string>
    <string name="add">Add Entry</string>
    <string name="add_entry">Add Entry</string>
    <string name="credit">Credit</string>
    <string name="debit">Debit</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="please_enter_an_amount">Please enter an amount.</string>
    <string name="new_tag">New Tag</string>
    <string name="create_new_tag">Add New Tag</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="tags">Tags</string>
    <string name="no_description_found">No Description Found</string>
    <string name="no_tags_found">No Tags Found</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="all">All</string>
    <string name="select_tag">Select Tag</string>
    <string name="settings">Settings</string>
    <string name="about_cashbook">About CashBook</string>

    <string-array name="timeperiod_array">
        <item>Today</item>
        <item>This Week</item>
        <item>This Month</item>
        <item>This Year</item>
    </string-array>
    <string-array name="array_spinner_groupby">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>

</resources>